# SunriseEngine

./: CMakeLists.txt  main.cpp
EngineCore/: CMakeLists.txt
EngineCore/inc/: PlatformCore.hpp
EngineCore/inc/Events/: Event.hpp
EngineCore/src/: PlatformCore.cpp
EngineCore/src/Events/: Event.cpp
EngineUI/: CMakeLists.txt
EngineUI/inc/: BaseWindow.hpp  GuiController.hpp
EngineUI/src/: BaseWindow.cpp  GuiController.cpp
EngineUtils/: CMakeLists.txt
EngineUtils/inc/: Logger.h  Logger.hpp  global_defines.h
EngineUtils/src/: Logger.cpp
